--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 ### IntelliJ IDEA ###
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
-
-WTIProj.iml
-/.idea
+#out/
+#!**/src/main/**/out/
+#!**/src/test/**/out/
+#
+#WTIProj.iml
+#/.idea
 
 ### Eclipse ###
 .apt_generated
